--- a/NcDonalds/wwwroot/css/account.css
+++ b/NcDonalds/wwwroot/css/account.css
@@ -49,7 +49,7 @@
 }
 
 
-.img-mulher, .img-login {
+.img-mulher, .img-login, .img-action{
     margin-top: -50px;
     margin-left: 30px;
     margin-bottom: -40px;
