--- a/NcDonalds/Areas/Admin/Views/AdminLanche/Edit.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminLanche/Edit.cshtml
@@ -2,66 +2,76 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<div class="lanche-action">
 
-<form asp-area="Admin" asp-controller="AdminLanche" asp-action="Edit" method="post" class="inputs" role="form">
+    <h1 class="title-content">Edição @Model.Nome</h1>
 
-    <input type="hidden" asp-for="LancheId" />
+    <div class="container-row">
 
-    <div class="field">
-        <label asp-for="Nome" class=""></label>
-        <input asp-for="Nome" class="" />
-        <span asp-validation-for="Nome" class=""></span>
+        <section class="section-container">
+            <img class="img-action" src="/images/editar-codigo.svg" alt="mulher bebendo suquinho">
+        </section>
+
+        <form asp-area="Admin" asp-controller="AdminLanche" asp-action="Edit" method="post" class="inputs" role="form">
+
+            <input type="hidden" asp-for="LancheId" />
+
+            <div class="field">
+                <label asp-for="Nome" class=""></label>
+                <input asp-for="Nome" class="" />
+                <span asp-validation-for="Nome" class=""></span>
+            </div>
+
+            <div class="field">
+                <label asp-for="Preco"></label>
+                <input asp-for="Preco" />
+                <span asp-validation-for="Preco"></span>
+            </div>
+
+            <div class="field">
+                <label asp-for="DescricaoCurta"></label>
+                <input asp-for="DescricaoCurta" />
+                <span asp-validation-for="DescricaoCurta"></span>
+            </div>
+
+            <div class="field">
+                <label asp-for="DescricaoDetalhada"></label>
+                <input asp-for="DescricaoDetalhada" />
+                <span asp-validation-for="DescricaoDetalhada"></span>
+            </div>
+
+            <div class="field">
+                <label asp-for="ImagemThumbURL"></label>
+                <input asp-for="ImagemThumbURL" />
+                <span asp-validation-for="ImagemThumbURL"></span>
+            </div>
+
+            <div class="field">
+                <label asp-for="ImagemURL"></label>
+                <input asp-for="ImagemURL" />
+                <span asp-validation-for="ImagemURL"></span>
+            </div>
+
+            <div class="field">
+                <input type="hidden" asp-for="EmEstoque" />
+            </div>
+
+            <div class="field">
+                <label asp-for="CategoriaId"></label>
+                <input asp-for="CategoriaId" />
+                <span asp-validation-for="CategoriaId"></span>
+            </div>
+
+            <div class="submit-input">
+                <input type="submit" class="botao-cadastrar" value="Salvar" />
+            </div>
+
+        </form>
+
     </div>
 
-    <div class="field">
-        <label asp-for="Preco"></label>
-        <input asp-for="Preco" />
-        <span asp-validation-for="Preco"></span>
-    </div>
 
-    <div class="field">
-        <label asp-for="DescricaoCurta"></label>
-        <input asp-for="DescricaoCurta" />
-        <span asp-validation-for="DescricaoCurta"></span>
-    </div>
-
-    <div class="field">
-        <label asp-for="DescricaoDetalhada"></label>
-        <input asp-for="DescricaoDetalhada" />
-        <span asp-validation-for="DescricaoDetalhada"></span>
-    </div>
-
-    <div class="field">
-        <label asp-for="ImagemThumbURL"></label>
-        <input asp-for="ImagemThumbURL" />
-        <span asp-validation-for="ImagemThumbURL"></span>
-    </div>
-
-    <div class="field">
-        <label asp-for="ImagemURL"></label>
-        <input asp-for="ImagemURL" />
-        <span asp-validation-for="ImagemURL"></span>
-    </div>
-
-    <div class="field">
-        <label asp-for="EmEstoque"></label>
-        <input asp-for="EmEstoque" />
-        <span asp-validation-for="EmEstoque"></span>
-    </div>
-
-    <div class="field">
-        <label asp-for="CategoriaId"></label>
-        <input asp-for="CategoriaId" />
-        <span asp-validation-for="CategoriaId"></span>
-    </div>
-
-    <div class="submit-input">
-        <input type="submit" class="botao-cadastrar" value="Salvar" />
-    </div>
-
-</form>
+</div>
 
