--- a/NcDonalds/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                         <a asp-controller="AdminCategoria" asp-action="Index">Categorias</a>
                     </li>
                     <li>
-                        <a asp-controller="AdminPedidos" asp-action="Index">Pedidos</a>
+                        <a asp-controller="AdminPedido" asp-action="Index">Pedidos</a>
                     </li>
                 </ul>
             </nav>
