--- a/NcDonalds/Areas/Admin/Views/AdminPedido/Index.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminPedido/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Pedido>
 
 @{
-    ViewData["Title"] = "Pedido";
+    ViewData["Title"] = "Pedidos Pendentes";
 }
 
 <div class="content-admin">
