--- a/NcDonalds/Views/Shared/_LoginPartial.cshtml
+++ b/NcDonalds/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 
 
     <li class="header-profile">
-        <a asp-controller="Account" asp-action="Logout">
+        <a asp-area="" asp-controller="Account" asp-action="Logout" >
             <img class="img-profile" src="~/images/perfil.jpg" />
         </a>
     </li>
