Inserção de Account Profile

--- a/NcDonalds/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet " href="~/css/contato.css">
     <link rel="stylesheet " href="~/css/lanche.css">
+    <link rel="stylesheet " href="~/css/account.css">
+
 
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
