Implementação da View de Chekout Completa

--- a/NcDonalds/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/_Layout.cshtml
@@ -14,6 +14,9 @@
     <link rel="stylesheet " href="~/css/contato.css">
     <link rel="stylesheet " href="~/css/lanche.css">
     <link rel="stylesheet " href="~/css/account.css">
+    <link rel="stylesheet " href="~/css/userProfile.css">
+    <link rel="stylesheet " href="~/css/chekout.css">
+
 
 
 
@@ -68,7 +71,7 @@
         </div>
     </header>
 
-    <main class="">
+    <main>
         @RenderBody()
     </main>
 
