--- a/NcDonalds/Views/Pedido/CheckoutCompleto.cshtml
+++ b/NcDonalds/Views/Pedido/CheckoutCompleto.cshtml
@@ -1,40 +1,52 @@
 ﻿@model PedidoViewModel
 
-@section bootstrap{
-
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+@{
+    ViewData["Title"] = "Pedido";
 }
 
 
-<div class="container marginTop1">
 
-    <div class="jumbotron">
-        <h2>Pedido Finalizado</h2>
+<div class="chekout">
+
+    <div class="title ">
+        <h2>Obrigado pelo seu pedido!!! :) </h2>
     </div>
-    <div class="card">
-        <div class="card-body">
-            <p>Cliente : <strong>@Model.User.UserName</strong>
-            <p>Data do Pedido :  <strong>@Model.pedido.PedidoRecebido</strong>
-            <p>Número do Pedido   : <strong>@Model.pedido.PedidoId</strong></p>
-            <table class="table">
-                <tr>
-                    <th></th>
-                    <th>Quantidade</th>
-                    <th>Lanche</th>
-                    <th>Preço</th>
-                </tr>
-                @foreach (var item in Model.Itens)
-                {
+    <div class="chekout-content">
+
+            <div class="chekout-user">
+                <p>Cliente : <strong>@Model.User.UserName</strong>
+                <p>Data do Pedido :  <strong>@Model.pedido.PedidoRecebido</strong>
+                <p>Número do Pedido   : <strong>@Model.pedido.PedidoId</strong></p>
+            </div>
+
+            
+            <table class="chekout-lanche">
+                <thead>
                     <tr>
-                        <td><img src="@item.Lanche.ImagemThumbURL" width="40" height="40" /></td>
-                        <td>@item.Quantidade</td>
-                        <td>@item.Lanche.Nome</td>
-                        <td>@item.Lanche.Preco</td>
+                        <th></th>
+                        <th>Quantidade</th>
+                        <th>Lanche</th>
+                        <th>Preço</th>
                     </tr>
-                }
+                </thead>
+                
+                <tbody>
+                    @foreach (var item in Model.Itens)
+                    {
+                        <tr>
+                            <td><img src="@item.Lanche.ImagemURL" width="40" height="40" /></td>
+                            <td>@item.Quantidade</td>
+                            <td>@item.Lanche.Nome</td>
+                            <td>@item.Lanche.Preco</td>
+                        </tr>
+                    }
+                </tbody>
+               
             </table>
-            <h4>Valor Total do Pedido: <strong>@Model.pedido.PedidoTotal.ToString("C2"))</strong></h4>
-        </div>
+            
+            <div class="chekout-preco">
+                <h4>Valor Total do Pedido: </h4>
+                <p> <strong>@Model.pedido.PedidoTotal.ToString("C2")) </strong> </p>
+            </div>
     </div>
 </div>
