--- a/NcDonalds/Views/CarrinhoCompra/Index.cshtml
+++ b/NcDonalds/Views/CarrinhoCompra/Index.cshtml
@@ -5,26 +5,23 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@section bootstrap{
-
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-}
 
 
-<div class="row checkoutForm" style="width:80%; margin:0 auto;">
 
-    <img src="~/images/Full-Cart-icon.png" />
-    <div>
+<div class="carrinho-compra" style="width:80%; margin:0 auto;">
+
+    <div class="title">
+        <img src="~/images/cart-full.svg" />
         <h4> Seu carrinho de compras: </h4>
     </div>
-    <table class="table table-bordered table-striped">
+
+
+    <table class="carrinho-itens">
         <thead>
             <tr>
                 <th>Quantidade</th>
                 <th>Lanche</th>
                 <th class="text-right">Preço</th>
-                <th class="text-right">Subtotal</th>
                 <th></th>
             </tr>
         </thead>
@@ -32,9 +29,12 @@
             @foreach (var item in Model.CarrinhoCompra.CarrinhoCompraItens)
             {
                 <tr>
-                    <td class="text-center">@item.Quantidade</td>
-                    <td class="text-left">@item.Lanche.Nome</td>
-                    <td class="text-right">@item.Lanche.Preco.ToString("c")</td>
+                    <td class="text-center">
+                        @item.Quantidade
+                    </td>
+                    <td class="text-left">
+                        @item.Lanche.Nome
+                    </td>
                     <td class="text-right">
                         @((item.Quantidade * item.Lanche.Preco).ToString("c"))
                     </td>
@@ -44,17 +44,14 @@
                 </tr>
             }
         </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="3" class="text-right">Total:</td>
-                <td class="text-right">
-                    @Model.CarrinhoCompraTotal.ToString("c")
-                </td>
-            </tr>
-        </tfoot>
     </table>
 
-    <div class="text-right">
+    <div class="carrinho-total">
+        <p> Total:</p>
+        <p>@Model.CarrinhoCompraTotal.ToString("c") </p>
+    </div>
+
+    <div class="carrinho-op">
         <div class="btn-group ">
             <a class="btn btn-success" asp-controller="Pedido" asp-action="Checkout">Encerrar Pedido</a>
             <a asp-controller="Lanche" asp-action="List"><b>Adicionar mais lanches</b></a>
