Alterações no carrinho de compras

--- a/NcDonalds/Views/CarrinhoCompra/Index.cshtml
+++ b/NcDonalds/Views/CarrinhoCompra/Index.cshtml
@@ -14,7 +14,6 @@
 
 <div class="row checkoutForm" style="width:80%; margin:0 auto;">
 
-    <img src="~/images/Full-Cart-icon.png" />
     <div>
         <h4> Seu carrinho de compras: </h4>
     </div>
@@ -39,7 +38,7 @@
                         @((item.Quantidade * item.Lanche.Preco).ToString("c"))
                     </td>
                     <td class="text-center">
-                        <a asp-controller="CarrinhoCompra" asp-action="RemoverItem" asp-route-lancheId="@item.Lanche.LancheId"><img src="~/images/delete.png" /></a>
+                        <a asp-controller="CarrinhoCompra" asp-action="RemoverItem" asp-route-lancheId="@item.Lanche.LancheId"><img src="~/images/Lanches/delete.png" /></a>
                     </td>
                 </tr>
             }
