--- a/NcDonalds/Views/CarrinhoCompra/Index.cshtml
+++ b/NcDonalds/Views/CarrinhoCompra/Index.cshtml
@@ -5,6 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@section bootstrap{
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+}
 
 
 
