--- a/NcDonalds/Areas/Admin/Views/AdminCategoria/Delete.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminCategoria/Delete.cshtml
@@ -7,13 +7,13 @@
 
 <div class="lanche-action">
 
-    <h3>Desejá realmente retirar <span> @Model.Nome  </span> do estoque? </h3>
+    <h3>Deseja realmente retirar <span> @Model.Nome  </span> do estoque? </h3>
 
 
     <div class="container-row">
 
         <section class="section-container">
-            <img class="" src="/images/remover-2.svg" alt="mulher bebendo suquinho">
+            <img class="" src="/images/Lanches/lixeiraa.svg" alt="mulher bebendo suquinho">
         </section>
 
         <section>
