--- a/NcDonalds/Views/CarrinhoCompra/Index.cshtml
+++ b/NcDonalds/Views/CarrinhoCompra/Index.cshtml
@@ -5,6 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@section bootstrap{
+
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+}
 
 
 
