--- a/NcDonalds/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/_Layout.cshtml
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - NcDonalds</title>
 
+    @RenderSection("bootstrap", false)
+
     <!-- Stylus -->
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet " href="~/css/contato.css">
     <link rel="stylesheet " href="~/css/lanche.css">
     <link rel="stylesheet " href="~/css/account.css">
     <link rel="stylesheet " href="~/css/userProfile.css">
+    <link rel="stylesheet " href="~/css/chekout.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    @RenderSection("bootstrap", false)
 
 </head>
 <body>
