--- a/NcDonalds/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -32,12 +32,9 @@
                 <ul class="container-row">
                     <li>
                         <a asp-controller="Admin" asp-action="Index">
-                            <img src="/images/admin (1).svg" class="img-header">
+                            <img src="~/images/admin-nav.svg" class="img-header">
                         </a>
 
-                    </li>
-                    <li>
-                        <a asp-area="" asp-controller="Home" asp-action="Index">NcDonalds</a>
                     </li>
                     <li>
                         <a asp-controller="Admin" asp-action="Index">Home</a>
