Alterando lanche css

--- a/NcDonalds/Views/CarrinhoCompra/Index.cshtml
+++ b/NcDonalds/Views/CarrinhoCompra/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 
-<div class="carrinho-compra" style="width:80%; margin:0 auto;">
+<div class="carrinho-compra" style="width:80%; margin:0 auto; padding: 20px;">
 
     <div>
         <h4> Seu carrinho de compras: </h4>
