Correção de alguns bugs

--- a/NcDonalds/Areas/Admin/Views/AdminCategoria/Index.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminCategoria/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Categoria>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categorias";
 }
 
 <div class="content-admin">
@@ -9,7 +9,7 @@
     <div class="container-column">
         <div class="header-content">
             <h2> Gerenciamento de Categorias </h2>
-            <a class="login-button" asp-action="Create" asp-controller="AdminCategoria" asp-area="Admin"> Criar Categorias </a>
+            <a class="button-admin" asp-action="Create" asp-controller="AdminCategoria" asp-area="Admin"> Criar Categorias </a>
         </div>
 
         <div class="">
