Ajuste Bugs em geral

--- a/NcDonalds/Areas/Admin/Views/AdminCategoria/Index.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminCategoria/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="container-column">
         <div class="header-content">
             <h2> Gerenciamento de Categorias </h2>
-            <a class="button-admin" asp-action="Create" asp-controller="AdminCategoria" asp-area="Admin"> Criar Categorias </a>
+            <a class="button-admin" asp-action="Create" asp-controller="AdminCategoria" asp-area="Admin"> Criar Categoria </a>
         </div>
 
         <div class="">
