--- a/NcDonalds/Views/Account/Register.cshtml
+++ b/NcDonalds/Views/Account/Register.cshtml
@@ -18,40 +18,43 @@
 
 <form asp-controller="Account" asp-action="Register" method="post" class="inputs" role="form">
 
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+
     <div class="field">
         <label asp-for="UserName" class=""></label>
-        <input asp-for="UserName" class="" />
         <span asp-validation-for="UserName" class=""></span>
+        <input asp-for="UserName" class="" />
     </div>
 
     <div class="field">
         <label asp-for="Email" class=""></label>
-        <input asp-for="Email" class="" />
         <span asp-validation-for="Email" class=""></span>
+        <input asp-for="Email" class="" />
     </div>
 
     <div class="field">
         <label asp-for="Cpf" class=""></label>
-        <input asp-for="Cpf" class="" />
         <span asp-validation-for="Cpf" class=""></span>
+        <input asp-for="Cpf" class="" />
     </div>
 
     <div class="field">
         <label asp-for="Telefone" class=""></label>
-        <input asp-for="Telefone" class="" />
         <span asp-validation-for="Telefone" class=""></span>
+        <input asp-for="Telefone" class="" />
     </div>
 
     <div class="field">
         <label asp-for="Password" class=""></label>
-        <input asp-for="Password" class="" />
         <span asp-validation-for="Password" class=""></span>
+        <input asp-for="Password" class="" />
     </div>
 
     <div class="field">
         <label asp-for="Confirme_Password" class=""></label>
-        <input asp-for="Confirme_Password" class="" />
         <span asp-validation-for="Confirme_Password" class=""></span>
+        <input asp-for="Confirme_Password" class="" />
     </div>
 
     <div class="submit-input">
