--- a/NcDonalds/Views/CarrinhoCompra/Index.cshtml
+++ b/NcDonalds/Views/CarrinhoCompra/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="carrinho-compra" style="width:80%; margin:0 auto; padding: 20px;">
 
     <div>
-        <h4> Seu carrinho de compras: </h4>
+        <h2> Seu carrinho de compras: </h2>
     </div>
 
 
@@ -45,7 +45,7 @@
 
     <div class="carrinho-total">
         <p> Total:</p>
-        <p>@Model.CarrinhoCompraTotal.ToString("c") </p>
+        <p>@Model.CarrinhoCompraTotal.ToString("C2") </p>
     </div>
 
     <div class="carrinho-op">
