--- a/NcDonalds/Areas/Admin/Views/AdminCategoria/Edit.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminCategoria/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <div class="lanche-action">
 
-    <h1 class="title-content">Edição @Model.Nome</h1>
+    <h1 class="title-content">Editar @Model.Nome</h1>
 
     <div class="container-row">
 
@@ -15,6 +15,8 @@
         </section>
 
         <form asp-area="Admin" asp-controller="AdminCategoria" asp-action="Edit" method="post" class="inputs" role="form">
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <input type="hidden" asp-for="CategoriaId" />
 
