--- a/NcDonalds/Views/Home/Index.cshtml
+++ b/NcDonalds/Views/Home/Index.cshtml
@@ -19,14 +19,7 @@
                     <h3 class="title"> Quem Somos </h3>
 
                     <p class="text">
-
-                        Lorem Ipsum is simply dummy text of
-                        the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's
-                        standard dummy text ever since the
-                        1500s, when an unknown printer took
-                        a galley of type and scrambled it to
-                        make a type specimen book.
+                        Líder no segmento de serviço rápido de alimentação, o NcDonald's se destaca pela qualidade dos produtos e do atendimento. O NcDonald's é a maior e mais conhecida empresa de serviço rápido de alimentação do mundo.  No Brasil, a rede é operada desde 2007 pela Arcos Dourados, máster franqueada da marca NcDonald's em toda a América Latina.
                     </p>
                 </div>
 
@@ -41,21 +34,13 @@
 
                 <div class="container-column content-home">
                     <h3 class="title"> Quem Somos </h3>
-
                     <p class="text">
-
-                        Lorem Ipsum is simply dummy text of
-                        the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's
-                        standard dummy text ever since the
-                        1500s, when an unknown printer took
-                        a galley of type and scrambled it to
-                        make a type specimen book.
+                        O primeiro restaurante do Brasil foi inaugurado em 1979, em Copacabana, Rio de Janeiro. Uma das melhores empresas para trabalhar no Brasil e um dos maiores empregadores de jovens do país, o NcDonald’s reforça seu compromisso com a segurança e a saúde do trabalhador e anuncia o apoio ao movimento Abril Verde, iniciativa que ressalta a discussão sobre a segurança e a saúde no ambiente de trabalho.
                     </p>
                 </div>
 
                 <div class="img-home">
-                    <img src="/images/cliente.png"/>
+                    <img src="/images/cliente.png" />
                 </div>
 
             </div>
