--- a/NcDonalds/wwwroot/css/lanche.css
+++ b/NcDonalds/wwwroot/css/lanche.css
@@ -11,6 +11,8 @@
     justify-content: center;
     margin: 70px 0;
     color: white;
+    font-size: 2.0rem;
+    font-weight: 300;
 }
 
 .container-page {
@@ -26,6 +28,7 @@
     display: flex;
     margin-right: 80px;
 }
+
 
     .img-lanche img {
         width: 250px;
@@ -100,6 +103,8 @@
     border-radius: 12px;
     padding: 10px 15px;
 }
+
+
 .a.btn.btn-success {
     font-weight: bold;
     color: #FFFFFF;
