Ajustes em login

--- a/NcDonalds/Views/Shared/_LoginPartial.cshtml
+++ b/NcDonalds/Views/Shared/_LoginPartial.cshtml
@@ -28,7 +28,7 @@
 else
 {
     <li>
-        <a class="nav-link text-light" asp-controller="Account" asp-action="Login" style="color:white">Já Tem Registro?</a>
+        <a class="" asp-controller="Account" asp-action="Login" style="color:white">Já Tem Registro?</a>
     </li>
 
     <li>
