--- a/NcDonalds/Views/Account/Login.cshtml
+++ b/NcDonalds/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 @model LoginViewModel
 
 @section navMessage{
-    <span>Não tem conta?</span>
+    <a>Não tem conta?</a>
     <a asp-controller="Account" asp-action="Register" class="login-button">Faça Agora</a>
 }
 
