--- a/NcDonalds/Views/Account/Register.cshtml
+++ b/NcDonalds/Views/Account/Register.cshtml
@@ -7,8 +7,8 @@
 }
 
 @section navMessage{
-    <span>Já tem conta?</span>
-    <a asp-controller="Account" asp-action="Login" class="login-button">Faça login</a>
+    <a class="title-account" asp-controller="Account" asp-action="Login" style="color:white">Já Tem Registro?</a>
+    <a class="title-account login-button" asp-controller="Account" asp-action="Login" >Entrar</a>
 }
 
 <!-- page content -->
