Ajuste em Admin lanche

--- a/NcDonalds/Areas/Admin/Views/AdminLanche/Delete.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminLanche/Delete.cshtml
@@ -21,7 +21,7 @@
             <div class="lanche-remove">
 
                 <p>@Model.Nome</p>
-                <img src="@Model.ImagemThumbURL" />
+                <img src="@Model.ImagemURL" />
 
             </div>
 
