--- a/NcDonalds/Areas/Admin/Views/Shared/LancheDetalhes.cshtml
+++ b/NcDonalds/Areas/Admin/Views/Shared/LancheDetalhes.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Lanche
 
 <div class="col-md-4 col-sm-4 col-lg-4">
-    <img src="@Model.ImagemThumbURL" class="card-img-top imageLanche" alt="@Model.Nome" />
+    <img src="@Model.ImagemURL" class="card-img-top imageLanche" alt="@Model.Nome" />
     <div class="figure-caption">
         <h4 class="formPullRightButton">@Model.Preco.ToString("c")</h4>
         <h4>
