--- a/NcDonalds/Views/Pedido/CheckoutCompleto.cshtml
+++ b/NcDonalds/Views/Pedido/CheckoutCompleto.cshtml
@@ -51,7 +51,7 @@
 
         <div class="chekout-preco">
             <h4>Valor Total do Pedido: </h4>
-            <p> <strong>@Model.pedido.PedidoTotal.ToString("C2")) </strong> </p>
+            <p> <strong>@Model.pedido.PedidoTotal.ToString("C2") </strong> </p>
         </div>
     </div>
 </div>
