Ajustes e implementação do dropdown de users

--- a/NcDonalds/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - NcDonalds</title>
 
-    @RenderSection("bootstrap", false)
+    <partial></partial>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 
     <!-- Stylus -->
     <link rel="stylesheet" href="~/css/site.css" />
@@ -43,9 +44,9 @@
 
                     @if (User.IsInRole("Admin"))
                     {
-                    <li>
-                        <a asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
-                    </li>
+                        <li>
+                            <a asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
+                        </li>
                     }
 
 
@@ -70,12 +71,15 @@
     </main>
 
     <footer>
-        <p>Copyright © NcDonald’s 2021</p>
+        <div class="container">
+            &copy; 2021 - NcDonald’s
+        </div>
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
+
 </body>
 </html>
