--- a/NcDonalds/Views/Shared/Account/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/Account/_Layout.cshtml
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - NcDonalds</title>
-    
     <partial name="Account/_Stylus" />
 
 </head>
@@ -25,9 +25,10 @@
     </main>
 
     <footer>
-        <p>Copyright © NcDonald’s 2021</p>
+        <div class="container">
+            &copy; 2021 - NcDonald’s
+        </div>
     </footer>
-
 
     <partial name="Account/_Scripts" />
 
