--- a/NcDonalds/Views/Shared/_LancheResumo.cshtml
+++ b/NcDonalds/Views/Shared/_LancheResumo.cshtml
@@ -9,7 +9,7 @@
     
     <div class="info" >
         <h2 class="title">
-            <a asp-controller="Lanche" asp-action="Details" asp-route-lancheId="@Model.LancheId">@Model.Nome</a>
+            @Model.Nome
         </h2>
 
         <p class="descricao-curta"> @Model.DescricaoCurta </p>
